# babelon

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  babelon-convert.py  babelon.html  build.sh  conf.py  deploy.sh  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  scratch_1.py  search.html  searchindex.js  sitemap.xml  tox.ini  xml_parser.ipynb
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
Profile/: index.html
Translation/: index.html
_sources/: babelon.rst.txt  index.rst.txt  modules.rst.txt
credits/: index.html
csv/: babelon.csv  obabel.csv
docs/: conf.py
graphql/: babelon.graphql  obabel.graphql
home/: index.html
jsonschema/: babelon.schema.json  obabel.schema.json
linkml_csv_loader_test/: babelon.yaml  parsed_data_sample.csv
owl/: babelon.owl.ttl  obabel.owl.ttl
predicate_id/: index.html
python/: babelon.py  obabel.py
search/: search_index.json
shex/: babelon.shex  obabel.shex
source/: index.html
source_language/: index.html
source_value/: index.html
source_version/: index.html
src/babelon/: __init__.py  babelon_io.py  cli.py  constants.py  dataclasses.py  io.py  translate.py  translation_profile.py  utils.py
src/babelon/parsers/: xliff.py
src/babelon/schema/: babelon.yaml
src/docs/: credits.md  home.md
src/notebooks/: babelon_notebook.ipynb
src/schema/: babelon.yaml  my_core.yaml  my_schema.yaml  obabel.yaml
subject_id/: index.html
tests/: __init__.py  constants.py  test_convert.py  test_data.py  test_parsers.py  test_translate.py  test_translation_profile.py  test_utils.py
tests/data/: hp-testsubset.obo  parsed_data_test.csv
tests/data/translations/: hp-cs-small.babelon.tsv  hp-cs-update.babelon.tsv  hp-cs.synonyms.tsv  hp-tr.synonyms.tsv
translation_confidence/: index.html
translation_date/: index.html
translation_language/: index.html
translation_precision/: index.html
translation_precision_enum/: index.html
translation_predicate_id/: index.html
translation_provider/: index.html
translation_source_language/: index.html
translation_status/: index.html
translation_status_enum/: index.html
translation_subject_id/: index.html
translation_translation_language/: index.html
translation_translation_value/: index.html
translation_translator/: index.html
translation_translator_expertise/: index.html
translation_type/: index.html
translation_type_enum/: index.html
translation_value/: index.html
translator/: index.html
translator_expertise/: index.html
translator_expertise_enum/: index.html
xliff_data_preprocessing_utils/: babelon.py  babelon.yaml  csv_loader_pandas.py  synonym_split.py  xmlParser.py  xml_parser.py
